# ghost-swarm

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE.md  MANUAL.md  README.md  dist-workspace.toml  lib.rs  opts.rs  prune.rs  repos.rs  sessions.rs  swarmctl.rs  workspaces.rs
.github/workflows/: github-build-setup.yml  pull-request.yml  release.yml
assets/linux/: com.penberg.swarm.ui.desktop
cmd/: mod.rs  prune.rs  repo.rs  session.rs  workspace.rs
forges/: github.rs
scripts/: tag.sh
ui/: app.rs  data.rs  ghostty.rs  swarm.rs  workspace_panel.rs
vendor-libghostty-vt-sys/: .cargo_vcs_info.json  Cargo.toml  README.md  build.rs
vendor-libghostty-vt-sys/tools/: gen_bindings.rs
