[package]
name = "swarm"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/penberg/swarm"

[lib]
path = "lib.rs"

[features]
default = ["ui"]
ui = ["dep:gtk", "dep:libghostty-vt", "dep:pangocairo"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "6"
gtk = { package = "gtk4", version = "0.10", features = ["v4_14"], optional = true }
libghostty-vt = { version = "0.1.1", optional = true }
libc = "0.2"
pangocairo = { version = "0.21", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
turso = "0.4"

[[bin]]
name = "swarmctl"
path = "swarmctl.rs"

[[bin]]
name = "swarm"
path = "ui/swarm.rs"
required-features = ["ui"]

[patch.crates-io]
libghostty-vt-sys = { path = "vendor-libghostty-vt-sys" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
